updated my cv with some styling

--- a/index.html
+++ b/index.html
@@ -1,80 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-
-<head>
-  <meta charset="utf-8">
-  <title>My first site💚 </title>
-</head>
-
-<body>
-<img src="picture-modified.png" width="250px"/>
-  <h1>My name is <a href="https://www.facebook.com/raul.chirigut/">Raul</a></h1>
-  <p>
-    <em>I'm studying at <b><a href="https://www.upt.ro/">Polytechnic University of Timisoara</a></b></em>
-    <em>and I'm working at <a href="https://www.ea.com/careers/ea-romania">Electronic Arts Romania</a></em>
-    <em>as a game tester.</em>
-  </p>
-  <hr>
-  <h3>Education</h3>
-    <table>
-      <thead>
-        <tr>
-          <th>Activity</th>
-          <th>Time period</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>
-            <a href="https://www.upt.ro/">Polytechnic University of Timisoara</a>
-          </td>
-          <td>2020-2024</td>
-        </tr>
-        <tr>
-          <td><a href="https://ltioanjebelean.info/">Ioan Jebelean Highschool </a></td>
-          <td>2016-2020</td>
-        </tr>
-        <tr>
-          <td><a href="https://www.facebook.com/Scoala-Gimnaziala-Nestor-Oprean-Nr2-183641235056726/">Nestor Oprean Gimnasium </a></td>
-          <td>2012-2016</td>
-        </tr>
-        <tr>
-          <td>Generala 2 Elementary School</td>
-          <td>2008-2012</td>
-        </tr>
-      </tbody>
-      <tfoot>
-
-      </tfoot>
-    </table>
-  <h3>Work Experience</h3>
-  <table>
-    <tr>
-      <td>
-        2021-present
-      </td>
-      <td>
-        Game Tester at Electornic arts Romania 2021-present
-      </td>
-    </tr>
-  </table>
-  <hr />
-  <h3>Skills</h3>
-  <table>
-    <thead>
-      <tr>
-        <td>HTML⭐⭐⭐⭐⭐  </td>
-        <td>CSS⭐⭐⭐⭐⭐  </td>
-      </tr>
-      <tr>
-        <td>C++ ⭐⭐⭐</td>
-        <td>Python ⭐⭐⭐</td>
-      </tr>
-    </thead>
-  </table>
-  <hr>
-  <h3><a href="myhobbies.html">My Hobbies</a></h3>
-  <h3><a href="contact.html">Contact me</a></h3>
-</body>
-
+  <head>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="favicon.ico">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chirigut Luca-Raul</title>
+  </head>
+  <body>
+    <div class="topContainer">
+      <h1>I'm Raul</h1>
+      <h2>a junior web developer</h2>
+      <img src="images/mountain.png" class="mountain" />
+    </div>
+      <div class="middleContainer">
+        <div class="profile">
+          <img src="images/poza.png" alt="picture-of-me" class="profil">
+          <h2>Hello.</h2>
+          <p>My name is Chirigut Luca-Raul and I am a Romanian front-end developer.</p>
+        </div>
+        <hr>
+        <div class="skills">
+          <h2>My Skills</h2>
+          <div class="skill-row1">
+            <img class="sk1img" src="images/programming.png" alt="">
+            <h3>Front Web Development</h3>
+            <p>My area of work is web development. I build the front of a website but I also can do the back-end. <br />
+             I did many projects in this domain.<br /> You can check my portofolio on <a href="https://github.com/chirigutraul/portofolio" class="git">Github</a>.</p>
+          </div>
+          <div class="skill-row2">
+            <img class="sk2img" src="images/coding.png" alt="">
+            <h3>I have knowledge in the following developer tools:</h3>
+            <p>Html, CSS, C++, Python, MySQL, PHP, Django, MongoDB,Bootstrap</p>
+          </div>
+        </div>
+        <div class="contactMe">
+          <h2>Get In Touch</h2>
+          <h3>I am available for freelancing projects.</h3>
+          <p>Feel free to contact me if you have any questions or if you want to work with me.</p>
+          <a class="btn" href="mailto:chirigutraul@email.com">CONTACT ME</a>
+        </div>
+        <hr>
+      </div>
+      <div class="bottomContainer">
+        <a class="footerLink" href="https://www.facebook.com/raul.chirigut/">Facebook</a><br />
+        <a class="footerLink" href="https://www.instagram.com/crg.raul/">Instagram</a><br />
+        <font>© 2021 Chirigut Raul.</font>
+      </div>
+  </body>
 </html>
