updated css and index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="profile">
           <img src="images/poza.png" alt="picture-of-me" class="profil">
           <h2>Hello.</h2>
-          <p>My name is Chirigut Luca-Raul and I am a Romanian front-end developer.</p>
+          <p class="introduction">My name is Chirigut Luca-Raul and I am a Romanian front-end developer.</p>
         </div>
         <hr>
         <div class="skills">
