--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h2>Get In Touch</h2>
           <h3>I am available for freelancing projects.</h3>
           <p>Feel free to contact me if you have any questions or if you want to work with me.</p>
-          <a class="btn" href="mailto:chirigutraul@email.com">CONTACT ME</a>
+          <a class="btn" href="mailto:chirigutraul@gmail.com">CONTACT ME</a>
         </div>
         <hr>
       </div>
